# constitution-rewritten

./: .env.example  .gitignore  README.md  docker-compose.yml  index.html  package-lock.json  package.json  pnpm-lock.yaml  prettier.config.mjs
.github/workflows/: ci.yml
apps/api/: .env.example  README.md  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial.py
apps/api/src/abstract_party/: __init__.py  config.py  main.py
apps/api/src/abstract_party/api/: deps.py  schemas.py
apps/api/src/abstract_party/api/routers/: auth.py  chat.py  health.py
apps/api/src/abstract_party/core/: security.py
apps/api/src/abstract_party/db/: __init__.py  models.py  session.py
apps/api/src/abstract_party/services/: kg_service.py  llm_factory.py  minio_service.py  rag_service.py
apps/api/src/abstract_party/services/graph/: __init__.py  legal_graph.py
apps/api/src/abstract_party/workers/: celery_app.py  tasks.py
apps/api/tests/: conftest.py  test_chat.py  test_health.py
apps/web/: .env.example  .eslintrc.cjs  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/(main)/chat/: page.tsx
apps/web/src/app/(main)/login/: page.tsx
apps/web/src/app/(main)/transparency/: page.tsx
apps/web/src/components/: app-shell.tsx  ashoka-chakra.tsx  providers.tsx
apps/web/src/components/landing/: landing-page.tsx
apps/web/src/components/ui/: button.tsx  card.tsx  input.tsx  scroll-area.tsx
apps/web/src/stores/: chat-store.ts
