[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "abstract-party-api"
version = "0.1.0"
description = "FastAPI backend for abstract-party"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic-settings>=2.6.0",
  "sqlalchemy[asyncio]>=2.0.36",
  "asyncpg>=0.30.0",
  "alembic>=1.14.0",
  "httpx>=0.28.0",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "redis>=5.2.0",
  "celery[redis]>=5.4.0",
  "qdrant-client>=1.12.0",
  "neo4j>=5.26.0",
  "minio>=7.2.0",
  "openai>=1.57.0",
  "langchain>=0.3.0",
  "langchain-openai>=0.2.0",
  "langchain-google-genai>=2.0.0",
  "langgraph>=0.2.0",
  "slowapi>=0.1.9",
  "python-multipart>=0.0.17",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.8.0",
  "mypy>=1.13.0",
  "types-redis",
  "types-passlib",
]

[tool.hatch.build.targets.wheel]
packages = ["src/abstract_party"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
packages = ["abstract_party"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
